--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: node_js
 node_js:
     - "0.10"
+scripts:
+    - ./node_modules/gulp/bin/gulp.js
+addons:
+    artifacts: true
+        debug: true
