--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,4 @@ deploy:
   skip_cleanup: true
   on:
     repo: JIoJIaJIu/angular-blocks
-    tags: true
-    all_branches: true
+    branch: master
